--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=3000
+NEXT_PUBLIC_EMAIL_SERVICE_ID=service_5qycaiw
+NEXT_PUBLIC_EMAIL_TEMPLATE_ID=template_40koqrj
+NEXT_PUBLIC_EMAIL_PUBLIC_KEY=4uAQX-dm_CWin457Z
+API_KEY=AIzaSyDtYjN_2lC1rFYW2s72MWJ0ewu1MbSKHaI
